--- a/src/week5/ue.Rmd
+++ b/src/week5/ue.Rmd
@@ -8,7 +8,7 @@ zahlengenerator in R mit der Funktion set.seed
 ```{r}
 set.seed(5982)
 
-n_val <- c(10, 1000, 10000)
+n_val <- c(10, 1000, 100000)
 
 
 stats <- function(nums) {
@@ -17,8 +17,8 @@ stats <- function(nums) {
   return(c(average, variance))
 }
 
-exp_mean <- (-1+1+2)/4
 exp_value <- (-1)*(1/4)+1*(1/4)+2*(1/4)
+exp_variance <- var(c(-1,0,1,2))
 
 for (i in n_val) {
   nums <- runif(i, -1, 2)
@@ -26,17 +26,136 @@ for (i in n_val) {
   cat(sprintf("n = %d", i))
   cat(sprintf("\nMittelwert = %f", numstats[1]))
   cat(sprintf("\nVarianz = %f", numstats[2]))
-  cat(sprintf("\nAbweichung vom Erwartungswert = %f\n", (abs(numstats[1]-exp_value))))
+  cat(sprintf("\nMittelwert im Versuch - Erwartungswert = %f", (numstats[1]-exp_value)))
+  cat(sprintf("\nVarianz im Versuch - Varianz = %f\n", (numstats[2]-exp_variance)))
 }
 
-
-numsA <- runif(10, -1, 2)
-
-numsB <- runif(1000, -1, 2)
-
-numsC <- runif(100000, -1, 2)
 
 
 
 
 ```
+
+mit Erwartungswert = `r exp_value` und Varianz = `r exp_variance`
+
+# Aufgabe 20
+Sei X eine binomialverteilte Zufallsvariable mit n = 1000 Ver-
+suchswiederholungen und Trefferwahrscheinlichkeit p = 1/5 (X ∼ B(1000, 0.2)).
+
+(i) Berechnen Sie Erwartungswert $E(X) = np$ und Varianz
+$Var(X) = np(1 − p)$ von X.
+
+(ii) Plotten Sie die kumulierte Binomialverteilung (pbinom) und die kumu-
+lierte Normalverteilung (pnorm) mit Erwartungswert E(X) und Varianz
+Var(X) im Bereich von $a = E(X)−3*\sqrt{Var(X)}$ bis $b = E(X)+3\sqrt{Var(X)}$
+ins gleiche Diagramm. Wählen Sie für die beiden Linien im Diagramm
+unterschiedliche Farben und Linientypen. Fügen Sie dem Diagramm eine
+Legende bei.
+
+(iii) Anscheinend ist die Normalverteilung eine gute Näherung für die Bi-
+nomialverteilung, wenn np groß ist. Benutzen Sie diese Tatsache, um
+$P(190 ≤ X ≤ 215)$ einmal exakt mit pbinom und dann in Näherung mit
+pnorm zu berechnen
+
+
+```{r}
+
+# (i)
+n <- 1000
+p <- 1/5
+
+exp_value <- n*p
+variance <- (n*p)*(1-p)
+
+cat("Erwartungswert: ", exp_value)
+cat("Varianz: ", variance)
+# (ii)
+a <- exp_value - 3 * sqrt(variance)
+b <- exp_value + 3 * sqrt(variance)
+
+bindist <- pbinom(q=0:n, size=n, prob=p)
+normdist <- pnorm(q=0:n, mean=exp_value, sd=sqrt(variance))
+
+plot(bindist, type="l", col="red", lwd=2, xlim=c(a,b), lty=1)
+lines(normdist, col="blue", lwd=2, lty=3)
+
+legend("topleft", legend=c("Binomialverteilung", "Normalverteilung"), col=c("red", "blue"), lty=c(1,3))
+
+# (iii)
+# P(190 ≤ X ≤ 215)
+exact_prob <- pbinom(q=215, size=n, prob=p) - pbinom(q=190-1, size=n, prob=p)
+
+approx_prob <- pnorm(q=215, mean=exp_value, sd=sqrt(variance)) - pnorm(q=190-1, mean=exp_value, sd=sqrt(variance))
+
+```
+iii $P(190 ≤ X ≤ 215)$ berechnet mit Binomialverteilung= `r exact_prob`
+
+... berechnet mit Normalverteilung = `r approx_prob`
+
+Die Abstand beträgt `r abs(exact_prob-approx_prob)`
+
+
+
+
+
+# Aufgabe 21
+Laden Sie die Daten in Schueler.txt in einen R Datensatz
+(data.frame). Untersuchen Sie die Frage, ob das Gewicht der Schulkinder
+als normalverteilt angenommen werden darf.
+(i) Erstellen Sie ein Histogramm der Variable Gewicht.
+(ii) Bestimmen Sie den Mittelwert M und die Standardabweichung s (Qua-
+dratwurzel aus der Varianz) der Variable Gewicht.
+(iii) Plotten Sie in einem Streudiagramm die p-Quantile der Variable Gewicht
+auf die Y-Achse (quantile) und die entsprechenden p-Quantile der Nor-
+malverteilung mit Erwartungswert M und Standardabweichung s auf die
+X-Achse (qnorm). Lassen Sie p von 0.01 bis 0.99 in Schritten der Länge
+0.01 laufen (z.B. seq(0.01,0.99,0.01)). In der Nähe welcher Geraden
+müssten die Punkte liegen, wenn die Variable Gewicht normalverteilt
+ist? Zeichnen Sie diese Gerade in das Diagramm ein.
+Bemerkung: Diagramme, in denen die Quantile der Normalverteilung den
+entsprechenden Quantilen aus einer Stichprobe gegenübergestellt werden,
+heißen Q-Q-Plots. Sie werden zur Überprüfung der Normalverteilungg
+benutzt.
+(iv) Erstellen Sie einen Q-Q-Plot f¨ur n = 1003 normalverteilte Zufallszahlen
+mit Erwartungswert M und Standardabweichung s (rnorm). Vergleichen
+Sie diesen Plot mit dem Diagramm aus der vorigen Teilaufgabe.
+
+```{r}
+schueler <- read.table(file = "~/Uni/Statistics1/src/week1/Schueler.txt", header=TRUE)
+
+
+# (i)
+hist(schueler$Gewicht, breaks=10)
+
+# (ii)
+avg_weight <- mean(schueler$Gewicht)
+dev_weight <- sd(schueler$Gewicht) # bzw: sqrt(var(schueler$Gewicht))
+
+# (iii)
+p <- seq(0.01,0.99,by=0.01)
+schueler_quant <- quantile(schueler$Gewicht, p)
+norm_quant <- qnorm(p, mean=avg_weight, sd=dev_weight)
+
+plot(schueler_quant, type="p", col="red", xlab="Quantile", ylab="Gewicht")
+lines(norm_quant, type="l")
+
+# (iv)
+n <- 1003
+
+ran <- rnorm(n, mean = avg_weight, sd = dev_weight)
+
+qqnorm(ran)
+```
+Man kann annehmen, dass die Gewiche normalverteilt sind.
+
+
+
+
+
+
+
+
+
+
+
+
